# CSR-RAG

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: analyze_link_bridge_policy_sensitivity_by_reranker.py  analyze_link_bridge_qa_policy_comparison.py  analyze_link_bridge_reranker_multiseed.py  analyze_link_bridge_reranker_paired_bootstrap.py  analyze_link_bridge_reranker_stability.py  analyze_link_bridge_semantic_qa_comparison.py  analyze_link_bridge_semantic_qa_rescore.py  audit_hotpotqa_corpus_completeness.py  build_features.py  build_link_bridge_embedding_manifest.py  build_support_augmented_diagnostic_records.py  calibrate_risk.py  compare_methods.py  evaluate_outputs.py  extract_hotpotqa_support_title_corpus.py  judge_link_bridge_qa_failures.py  prepare_data.py  prepare_embedding_retrieval_dataset.py  prepare_global_embedding_retrieval_dataset.py  prepare_global_hardneg_retrieval_dataset.py  prepare_hotpotqa.py  run_decision.py  run_embedding_rag_experiments.py  run_estimator_policy_sweep.py  run_hardneg_estimator_policy_sweep.py  run_hardneg_qa_eval.py  run_link_bridge_policy_qa_eval.py  run_link_bridge_retrieve_more_experiments.py  run_link_bridge_support_reranker.py  run_next_stage_experiments.py  run_official_intro_bm25_retrieval.py  run_official_intro_link_bridge_retrieval.py  run_real_rag_qa_eval.py  run_real_rag_smoke.py  run_retrieve_more_experiments.py  run_risk_sensitive_threshold_experiments.py  run_second_round_experiments.py  run_support_rank_upper_bound.py  run_third_round_experiments.py  split_dataset.py  (+2 more)
src/csrrag/: __init__.py
(+351 files in other folders)
